Agregar la vista de detalle de producto

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         </ul>
     </div>
     </nav>
+    <div class="dark inactive"></div>
     <aside id="shoppingCartContainer" class="inactive">
     <div class="title-container">
         <img src="./icons/flechita.svg" alt="arrow">
